--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aegisens - Health That Senses You</title>
-    <link rel="stylesheet" href="/health/style.css">
+    <title>Aegisens - Health That Senses You
+    </title>
     <style>
         * {
             margin: 0;
