--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
 <body>
     <div class="container">
         <div class="logo">
-            <h1>AEGISENS</h1>
+            <h1>logo.png</h1>
             <div class="subtitle">Health That Senses You</div>
         </div>
 
